@@ -16,3 +16,6 @@ binary(0.005)
 binary(1.1)
 binary([0,1])
 binary(I)
+vector(10, i, sumdigits(123456789, i+1))
+digits(2^128+3, 2^64)
+sumdigits(2^128+3, 2^64)
