@@ -6,4 +6,5 @@ Done for version 2.8.0 (released ??/??/2014):
   Fixed
 
   Added
-
+    1- add optional argument to sumdigits to specify the base
+    2- [libpari] bits_to_int,bits_to_u,binary_zv,binary_2k,binary_2k_zv
